# cmakeTemplate

./: README.md  cmake.sh  ide_linux.sh  ide_linux_eclipse.sh  ide_visual_studio.bat  ide_visual_studio.sh
ProjectDir/: CMakeLists.txt  cmake.sh
ProjectDir/EventChannel-bin/: CMakeLists.txt
ProjectDir/EventChannel-bin/src/: main.cpp
ProjectDir/EventChannel-lib/: CMakeLists.txt
ProjectDir/EventChannel-lib/src/: FooBar.cpp  FooBar.h
ProjectDir/cmake/: CMakeInclude.txt
